Fix https://bz.apache.org/bugzilla/show_bug.cgi?id=64008
Improve Javadocs for addWebapp. Also back-port BZ 62755.